netpol-ingress-2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: ingress-watch-nginx
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: nginx-client
        - namespaceSelector:
            matchLabels:
              app: pluto
        - ipBlock:
            matchLabels:
              app: nginx-client
      ports:
        - protocol: TCP
          port: 80
